backend-vnc: add VNC support using Neat VNC library
This adds basic VNC protocol support using the Neat VNC library
(https://github.com/any1/neatvnc). Neat VNC depends on the AML main
loop library. The backend comes with an integration for Waylands event
loop.

This implementation does not support authentication and hardcodes the
pixel format currently.

Signed-off-by: Stefan Agner <stefan@agner.ch>

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -27,6 +27,12 @@ option(
 	description: 'Weston backend: RDP remote screensharing'
 )
 option(
+	'backend-vnc',
+	type: 'boolean',
+	value: false,
+	description: 'Weston backend: VNC remote screensharing'
+)
+option(
 	'screenshare',
 	type: 'boolean',
 	value: true,
