--- a/libweston/meson.build
+++ b/libweston/meson.build
@@ -238,5 +238,6 @@ subdir('backend-drm')
 subdir('backend-fbdev')
 subdir('backend-headless')
 subdir('backend-rdp')
+subdir('backend-vnc')
 subdir('backend-wayland')
 subdir('backend-x11')
